# Driver_management_system

./: .flake8  .gitignore  alembic.ini  app.db.bak  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: docker-build.yml  python-lint.yml
alembic/: env.py
alembic/versions/: 126539147f0a_add_vehicles_and_maintenance.py  14c70117d793_add_arrived_at_source_time_to_trips.py  26b934579d00_fuel_table_added1.py  2b714bc5858e_source_company_column_added.py  2dabad468549_added_driver_and_trip_gps_coordinates.py  4afd5130cab0_add_trip_id_to_fuel_log.py  67af90106d1d_add_vehicle_id_to_trips.py  6bcc3ee0962e_add_audit_and_payout_to_trips.py  6bf0778114a7_driver_table_updated_foreign_key_updated.py  7cc997f6a6f0_trip_table_added.py  8a1b2c3d4e5f_users_table_added.py  9d3ecec34cee_all_table_updated.py  9e6e1e180f4a_add_start_end_odo_to_trips.py  a34cad05fa3b_driver_table_updated_foreign_key_updated.py  c2a1255fb3cc_initial_schema.py  c4f99e36c140_add_downtime_and_personal_fuel.py  c4feb9ade921_add_pre_trip_safety_inspections_table.py  e3c2d75f72fe_add_driver_salary_and_payments.py  e68dccef6ee8_priority_column_added_in_trip_table.py  (+2 more)
app/: config.py  db.py  main.py
frontend/: index.html  vite.config.ts
tests/: conftest.py  test_auth.py  test_dispatch_queue.py  test_downtime_utilization.py  test_driver_trip.py  test_frontend.py  test_fuel.py  test_geofence_alerts.py  test_health.py  test_inspections.py  test_matchmaking.py  test_reconciliation.py  test_safety_lockouts.py  test_scorecard.py  test_vehicles.py
(+29 files in other folders)
